# IITB-Software-Systems-Lab

./: README.md
Outlab 1/Task 1/: references.txt
Outlab 1/Task 1/code/: download.sh  evaluate.sh  organise.sh
Outlab 1/Task 2/: report.txt
Outlab 2/Solution/: main.bib  main.tex
Outlab 3/Solution/: references.txt
Outlab 3/Solution/numpy/q2_a/: operations1.py  operations2.py  operations3.py  operations4.py  operations5.py
Outlab 3/Solution/numpy/q2_b/: pca.py
Outlab 3/Solution/python/q1_a/: olympics.py
Outlab 3/Solution/python/q1_b/: win.py
Outlab 3/Solution/scipy/: q3_a.py
Outlab 5/Solution/: references.txt
Outlab 5/Solution/Bonus/: bonus.sh  bonus_sample_input.txt
Outlab 5/Solution/Q1/: Q1.sh  sample.txt
Outlab 5/Solution/Q2/: Q2.sh
Outlab 5/Solution/Q3/: Q3.sh  sample.txt  word_token_mapping.txt
Outlab 5/Solution/Q4/: Q4.sh  sample.csv
Outlab 5/Solution/Q5/: Q5.sh
Outlab 6/Solution/: references.txt
Outlab 6/Solution/q1/: q1.java
Outlab 6/Solution/q2/: input.txt  output.txt  q2.java
Outlab 6/Solution/q3/: q3.java
Outlab 6/Solution/q4/: Matrix.java
Outlab 6/Solution/q5/: Person.java  Student.java  Teacher.java
Outlab 8/Solution/: references.txt
Outlab 8/Solution/q1/task1/: pretmat.py
Outlab 8/Solution/q1/task2/: pretree.py
Outlab 8/Solution/q1/task3/: stack.py
Outlab 8/Solution/q2/: t1.gdb  t2.gdb  t3.gdb  t4.gdb  t5.gdb  t6.gdb  t7.gdb  t8.gdb
Outlab 8/Solution/q3/: CMakeLists.txt  rawmake
Outlab 8/Solution/q3/mygame/: CMakeLists.txt
Outlab 9/Solution/: references.txt
